# orderbook-simulator

./: .gitignore  Analyzing_orderbook.ipynb  Analyzing_orderbook10M.ipynb  Analyzing_orders.ipynb  Cargo.toml  Equilibrium_price.ipynb  README.md  notes.txt
examples/: sim_data.rs
src/: lib.rs  main.rs
src/matching_engine/: arena.rs  mod.rs  models.rs  orderbook.rs
src/simulator/: gbm.rs  mod.rs  order.rs
