[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.21", features = ["serde"]}
csv = "1.1.6"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features= ["v4", "serde"] }
rand_distr = "0.4.3"
anyhow = "1.0.65"
futures = "0.3.24"
indexmap = "1.9.1"
ordered-float = "3.2.0"
